--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
   @layer components {
     .field {
-      @apply rounded-lg bg-yellow-500 text-amber-900;
+      @apply rounded-lg bg-yellow-500 text-amber-900 p-10;
     }
   }
 }
@@ -27,7 +27,7 @@
       @apply rounded-lg bg-[rgb(var(--input))] px-3 py-1 placeholder:text-white outline-none focus:ring-1;
     }
     .field {
-      @apply rounded-lg bg-[rgb(var(--field-background))] text-zinc-400;
+      @apply rounded-lg bg-[rgb(var(--field-background))] text-zinc-400 p-10;
     }
   }
 }
