--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,29 @@
 @import "tailwindcss";
 
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 :root {
-  --background: 255 255 255;
-  --text: 17 17 17;
+  --background: 208 208 208;
   --input: 59 130 246;
-  --field: 212, 161, 66;
-  --field-text: 112, 77, 12;
+  --field-background: 102, 156, 217;
 
   @layer components {
+    .input-style {
+      @apply rounded-lg bg-[rgb(var(--field-background))] px-4 py-3 placeholder:text-blue-950 outline-white focus:ring-1 min-w-full;
+    }
     .field {
-      @apply rounded-lg bg-yellow-500 text-amber-900 p-10;
+      @apply rounded-lg bg-[rgb(var(--field-background))] text-blue-950 p-6;
+    }
+    .button {
+      @apply rounded-4xl p-1 px-5 bg-gradient-to-b bg-gradient-to-r from-amber-200 to-yellow-500 text-white cursor-pointer transition-transform duration-300 hover:scale-105;
+    }
+    .main-text {
+      @apply text-black;
+    }
+    .secondary-text {
+      @apply text-blue-950;
     }
   }
 }
@@ -17,17 +31,23 @@
 /* Dark theme */
 .dark-theme {
   --background: 2 2 18;
-  --text: 255 255 255;
-  --input: 30 30 33;
   --field-background: 30 30 33;
-  --fiel-text: 168, 167, 167;
 
   @layer components {
     .input-style {
-      @apply rounded-lg bg-[rgb(var(--input))] px-3 py-1 placeholder:text-white outline-none focus:ring-1;
+      @apply rounded-lg bg-[rgb(var(--field-background))] px-4 py-3 placeholder:text-white outline-white text-white focus:ring-1 min-w-full;
     }
     .field {
-      @apply rounded-lg bg-[rgb(var(--field-background))] text-zinc-400 p-10;
+      @apply rounded-lg bg-[rgb(var(--field-background))] text-zinc-400 p-6;
+    }
+    .button {
+      @apply rounded-4xl p-1 px-5 bg-gradient-to-b from-sky-600 via-cyan-400 to-blue-600 text-white cursor-pointer transition-transform duration-300 hover:scale-105;
+    }
+    .main-text {
+      @apply text-white;
+    }
+    .secondary-text {
+      @apply text-zinc-400;
     }
   }
 }
